refactor: 명령어 템플릿 구조 단순화 및 5.6.0 릴리스