@@ -1,8 +1,7 @@
 package org.nowstart.nyangnyangbot.adapter.in.web.command;
 
-import jakarta.validation.ConstraintViolationException;
 import jakarta.servlet.http.HttpServletResponse;
-import io.micrometer.common.util.StringUtils;
+import jakarta.validation.ConstraintViolationException;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.nowstart.nyangnyangbot.application.port.in.command.ManageCommandUseCase;
@@ -37,36 +36,25 @@ public class CommandController {
     private final ManageCommandUseCase manageCommandUseCase;
 
     @GetMapping
-    public String list(
-            @RequestParam(required = false) String type,
-            @RequestParam(required = false) Boolean active,
-            Model model
-    ) {
-        model.addAttribute("commands", commandViews(type, active));
+    public String list(@RequestParam(required = false) Boolean active, Model model) {
+        model.addAttribute("commands", commandViews(active));
         return COMMAND_LIST_FRAGMENT;
     }
 
     @GetMapping("/editor")
-    public String editor(
-            @RequestParam(required = false) Long commandId,
-            Model model
-    ) {
+    public String editor(@RequestParam(required = false) Long commandId, Model model) {
         model.addAttribute("commandForm", commandId == null ? CommandForm.empty() : commandForm(commandId));
+        addCommandVariables(model);
         return COMMAND_EDITOR_FRAGMENT;
     }
 
     @PostMapping("/validate")
     public String validate(@ModelAttribute CommandForm form, Model model) {
-        CommandForm normalizedForm = form.normalizedForType();
+        CommandForm normalizedForm = form.withDefaults();
         var result = manageCommandUseCase.validate(new ValidateCommand(
                 normalizedForm.commandId(),
-                normalizedForm.type(),
                 normalizedForm.trigger(),
-                emptyToNull(normalizedForm.actionKey()),
                 normalizedForm.messageTemplate(),
-                normalizedForm.timerIntervalMinutes(),
-                normalizedForm.timerMinChatCount(),
-                normalizedForm.requiredRole(),
                 normalizedForm.userCooldownSeconds()
         ));
         model.addAttribute("validationResult", new ValidationView(result.valid(), result.errors()));
@@ -76,15 +64,7 @@ public class CommandController {
     @PostMapping("/preview")
     public String preview(@ModelAttribute CommandForm form, Model model) {
         try {
-            var result = manageCommandUseCase.preview(new PreviewCommand(
-                    form.messageTemplate(),
-                    defaultValue(form.nickname(), "치즈냥"),
-                    defaultValue(form.trigger(), "!명령어"),
-                    defaultValue(form.args(), ""),
-                    firstArg(form.args()),
-                    secondArg(form.args()),
-                    form.favorite()
-            ));
+            var result = manageCommandUseCase.preview(new PreviewCommand(form.messageTemplate()));
             model.addAttribute("previewMessage", result.message());
         } catch (IllegalArgumentException | ConstraintViolationException e) {
             model.addAttribute("previewError", inputErrorMessage(e));
@@ -100,16 +80,20 @@ public class CommandController {
             HttpServletResponse response,
             Model model
     ) {
-        CommandForm activeForm = form.withActive(active).normalizedForType();
+        CommandForm activeForm = form.withActive(active).withDefaults();
+        addCommandVariables(model);
         try {
             CommandResult result = activeForm.commandId() == null
                     ? manageCommandUseCase.createCommand(createCommand(activeForm, actor(authentication)))
-                    : manageCommandUseCase.updateCommand(activeForm.commandId(), updateCommand(activeForm, actor(authentication)));
+                    : manageCommandUseCase.updateCommand(
+                            activeForm.commandId(),
+                            updateCommand(activeForm, actor(authentication))
+                    );
             model.addAttribute("commandForm", CommandForm.from(result));
             model.addAttribute("saveMessage", "저장됨");
             response.addHeader("HX-Trigger", COMMAND_LIST_REFRESH_TRIGGER);
         } catch (IllegalArgumentException | ConstraintViolationException e) {
-            model.addAttribute("commandForm", activeForm.withDefaults());
+            model.addAttribute("commandForm", activeForm);
             model.addAttribute("saveError", inputErrorMessage(e));
         }
         return COMMAND_EDITOR_FRAGMENT;
@@ -122,35 +106,41 @@ public class CommandController {
             HttpServletResponse response,
             Model model
     ) {
+        addCommandVariables(model);
         if (form.commandId() == null) {
             model.addAttribute("commandForm", form.withDefaults());
             model.addAttribute("saveError", "저장된 명령어만 비활성화할 수 있습니다.");
             return COMMAND_EDITOR_FRAGMENT;
         }
-        CommandForm inactiveForm = form.deactivate().normalizedForType();
+        CommandForm inactiveForm = form.deactivate();
         try {
-            CommandResult result = manageCommandUseCase.updateCommand(inactiveForm.commandId(), updateCommand(inactiveForm, actor(authentication)));
+            CommandResult result = manageCommandUseCase.updateCommand(
+                    inactiveForm.commandId(),
+                    updateCommand(inactiveForm, actor(authentication))
+            );
             model.addAttribute("commandForm", CommandForm.from(result));
             model.addAttribute("saveMessage", "비활성화됨");
             response.addHeader("HX-Trigger", COMMAND_LIST_REFRESH_TRIGGER);
         } catch (IllegalArgumentException | ConstraintViolationException e) {
-            model.addAttribute("commandForm", inactiveForm.withDefaults());
+            model.addAttribute("commandForm", inactiveForm);
             model.addAttribute("saveError", inputErrorMessage(e));
         }
         return COMMAND_EDITOR_FRAGMENT;
     }
 
-    private List<CommandView> commandViews(String type, Boolean active) {
+    private List<CommandView> commandViews(Boolean active) {
         return manageCommandUseCase.getCommands().stream()
-                .filter(command -> StringUtils.isBlank(type) || type.equals(command.type()))
                 .filter(command -> active == null || active == command.active())
                 .map(CommandView::from)
                 .toList();
     }
 
+    private void addCommandVariables(Model model) {
+        model.addAttribute("commandVariables", manageCommandUseCase.getVariables());
+    }
+
     private String inputErrorMessage(RuntimeException exception) {
         if (exception instanceof ConstraintViolationException violationException) {
-            // HTML 조각에는 내부 메서드 경로를 노출하지 않고 사용자가 읽을 메시지만 표시한다.
             return violationException.getConstraintViolations().stream()
                     .map(violation -> violation.getMessage())
                     .sorted()
@@ -170,14 +160,9 @@ public class CommandController {
 
     private CreateCommand createCommand(CommandForm form, String actor) {
         return new CreateCommand(
-                form.type(),
                 form.trigger(),
-                emptyToNull(form.actionKey()),
                 form.messageTemplate(),
-                form.timerIntervalMinutes(),
-                form.timerMinChatCount(),
                 form.active(),
-                form.requiredRole(),
                 form.userCooldownSeconds(),
                 actor
         );
@@ -185,14 +170,9 @@ public class CommandController {
 
     private UpdateCommand updateCommand(CommandForm form, String actor) {
         return new UpdateCommand(
-                form.type(),
                 form.trigger(),
-                emptyToNull(form.actionKey()),
                 form.messageTemplate(),
-                form.timerIntervalMinutes(),
-                form.timerMinChatCount(),
                 form.active(),
-                form.requiredRole(),
                 form.userCooldownSeconds(),
                 actor
         );
@@ -202,187 +182,64 @@ public class CommandController {
         return authentication == null ? DEFAULT_ACTOR : authentication.getName();
     }
 
-    private String emptyToNull(String value) {
-        return StringUtils.isBlank(value) ? null : value;
-    }
-
-    private String defaultValue(String value, String fallback) {
-        return StringUtils.isBlank(value) ? fallback : value;
-    }
-
-    private String firstArg(String args) {
-        String[] values = splitArgs(args);
-        return values.length == 0 ? null : values[0];
-    }
-
-    private String secondArg(String args) {
-        String[] values = splitArgs(args);
-        return values.length < 2 ? null : values[1];
-    }
-
-    private String[] splitArgs(String args) {
-        if (StringUtils.isBlank(args)) {
-            return new String[0];
-        }
-        return args.trim().split("\\s+", 3);
-    }
-
     public record OptionView(String value, String label) {
     }
 
     public record CommandForm(
             Long commandId,
-            String type,
             String trigger,
-            String actionKey,
             String messageTemplate,
-            Integer timerIntervalMinutes,
-            Integer timerMinChatCount,
             Boolean active,
-            String requiredRole,
-            Integer userCooldownSeconds,
-            String nickname,
-            String args,
-            Integer favorite
+            Integer userCooldownSeconds
     ) {
 
         static CommandForm empty() {
-            return new CommandForm(null, "TEXT", "", "", "", 10, 10, false, "USER", 30, "치즈냥", "첫번째 두번째", 100);
+            return new CommandForm(null, "", "", false, 30);
         }
 
         static CommandForm from(CommandResult result) {
             return new CommandForm(
                     result.id(),
-                    result.type(),
                     result.trigger(),
-                    result.actionKey(),
                     result.messageTemplate(),
-                    result.timerIntervalMinutes(),
-                    result.timerMinChatCount(),
                     result.active(),
-                    result.requiredRole(),
-                    result.userCooldownSeconds(),
-                    "치즈냥",
-                    "첫번째 두번째",
-                    100
+                    result.userCooldownSeconds()
             ).withDefaults();
         }
 
         CommandForm deactivate() {
             return new CommandForm(
                     commandId,
-                    type,
                     trigger,
-                    actionKey,
                     messageTemplate,
-                    timerIntervalMinutes,
-                    timerMinChatCount,
                     false,
-                    requiredRole,
-                    userCooldownSeconds,
-                    nickname,
-                    args,
-                    favorite
+                    userCooldownSeconds
             ).withDefaults();
         }
 
         CommandForm withActive(boolean active) {
             return new CommandForm(
                     commandId,
-                    type,
                     trigger,
-                    actionKey,
                     messageTemplate,
-                    timerIntervalMinutes,
-                    timerMinChatCount,
                     active,
-                    requiredRole,
-                    userCooldownSeconds,
-                    nickname,
-                    args,
-                    favorite
+                    userCooldownSeconds
             ).withDefaults();
-        }
-
-        CommandForm normalizedForType() {
-            CommandForm form = withDefaults();
-            if ("TIMER".equals(form.type)) {
-                return new CommandForm(
-                        form.commandId,
-                        form.type,
-                        null,
-                        null,
-                        form.messageTemplate,
-                        form.timerIntervalMinutes,
-                        form.timerMinChatCount,
-                        form.active,
-                        form.requiredRole,
-                        form.userCooldownSeconds,
-                        form.nickname,
-                        form.args,
-                        form.favorite
-                );
-            }
-            if ("TRIGGER".equals(form.type)) {
-                return new CommandForm(
-                        form.commandId,
-                        form.type,
-                        form.trigger,
-                        form.actionKey,
-                        null,
-                        null,
-                        null,
-                        form.active,
-                        form.requiredRole,
-                        form.userCooldownSeconds,
-                        form.nickname,
-                        form.args,
-                        form.favorite
-                );
-            }
-            return new CommandForm(
-                    form.commandId,
-                    form.type,
-                    form.trigger,
-                    null,
-                    form.messageTemplate,
-                    null,
-                    null,
-                    form.active,
-                    form.requiredRole,
-                    form.userCooldownSeconds,
-                    form.nickname,
-                    form.args,
-                    form.favorite
-            );
         }
 
         CommandForm withDefaults() {
             return new CommandForm(
                     commandId,
-                    defaultString(type, "TEXT"),
-                    defaultString(trigger, ""),
-                    defaultString(actionKey, ""),
-                    defaultString(messageTemplate, ""),
-                    timerIntervalMinutes == null ? 10 : timerIntervalMinutes,
-                    timerMinChatCount == null ? 10 : timerMinChatCount,
+                    trigger == null ? "" : trigger,
+                    messageTemplate == null ? "" : messageTemplate,
                     active != null && active,
-                    defaultString(requiredRole, "USER"),
-                    userCooldownSeconds == null ? 30 : userCooldownSeconds,
-                    defaultString(nickname, "치즈냥"),
-                    defaultString(args, "첫번째 두번째"),
-                    favorite == null ? 100 : favorite
+                    userCooldownSeconds == null ? 30 : userCooldownSeconds
             );
-        }
-
-        private static String defaultString(String value, String fallback) {
-            return StringUtils.isBlank(value) ? fallback : value;
         }
     }
 
     public record CommandView(
             Long id,
-            String type,
             String triggerLabel,
             String messageSummary,
             boolean active,
@@ -392,14 +249,15 @@ public class CommandController {
     ) {
 
         static CommandView from(CommandResult result) {
-            String triggerLabel = StringUtils.isBlank(result.trigger()) ? "-" : result.trigger();
-            String messageSummary = StringUtils.isBlank(result.messageTemplate()) ? "응답 없음" : result.messageTemplate();
+            String triggerLabel = result.trigger() == null || result.trigger().isBlank() ? "-" : result.trigger();
+            String messageSummary = result.messageTemplate() == null || result.messageTemplate().isBlank()
+                    ? "응답 없음"
+                    : result.messageTemplate();
             if (messageSummary.length() > 60) {
                 messageSummary = messageSummary.substring(0, 57) + "...";
             }
             return new CommandView(
                     result.id(),
-                    result.type(),
                     triggerLabel,
                     messageSummary,
                     result.active(),
@@ -410,7 +268,7 @@ public class CommandController {
         }
 
         private static String defaultString(String value, String fallback) {
-            return StringUtils.isBlank(value) ? fallback : value;
+            return value == null || value.isBlank() ? fallback : value;
         }
     }
 
